--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width">
 		<title>AirBnB</title>
 	</head>
-	<body style="margin:0px;padding:0px;">
+	<body style="margin: 0;
+		padding:0;">
 		<header sytle="background-color:#FF0000;
 			height:70px;
-			width:100%;
-			position:absolute;">
+			width:100%;">
 		</header>
 		<main></main>
 		<footer style="background-color:#00FF00;
